# volt-examples-client

./: README.md  pyproject.toml
app/: basics.py  pyproject.toml  run.sh
app/output/: deployment.xml
app/output/voter/: run.sh
app/src/app/: basics.py
app/templates/: deployment.xml.jinja
config/: var.yaml
output/voter/: run.sh
templates/voter/: run.sh.jinja
