[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["kjmadscience <kjadeja@voltdb.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.78.0"
typing_extensions = "4.1.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"